# cs229-chang

./: .gitignore  README.md  environment.yml  inference.py  pyproject.toml  utils.py
model/row_stacking/: base_model.py
model/row_stacking/results/: Data_bias_baseline_acc_10_50.csv  Data_bias_baseline_acc_50_10.csv  Data_bias_baseline_acc_50_50.csv  Model_bias_baseline_acc_10_50.csv  Model_bias_baseline_acc_50_10.csv  Model_bias_baseline_acc_50_50.csv  loss_torch_single_bias_ds2_50.csv
model/sgan/: sgan.py
model/sgan/models/: discriminator_single_with_noise_100_bias_ds100_90.pth  discriminator_single_with_noise_100_bias_ds1_90.pth  discriminator_single_with_noise_100_bias_ds2_90.pth  discriminator_single_with_noise_100_bias_ds2_90_orig_param.pth
model/sgan/results/: loss_torch_single_bias_ds1.csv  loss_torch_single_bias_ds100_2adv_div3.csv  loss_torch_single_bias_ds100_mixture1.csv  loss_torch_single_bias_ds100_mixture2.csv  loss_torch_single_bias_ds100_mixture3.csv  loss_torch_single_bias_ds2.csv  loss_torch_single_bias_ds2_orig_param.csv  loss_torch_single_bias_ds2_relu4.csv
notebook/: 1. MedMnist - Exploring .ipynb  2. MedMnist - Preprocessing.ipynb  FashionMnist-selection-bias.ipynb  MedicalMnist-selection-bias.ipynb  Mnist-selection-bias.ipynb
utils/: inference.py  preprocessing.py
